<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingTop="20dp"
    android:paddingHorizontal="20dp"
    android:background="@drawable/bg_bottom_sheet">

    <TextView
        android:id="@+id/txt_bottom_sheet_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="16sp"
        android:textColor="@color/color_default"
        android:text="@string/txt_title_img_bottom_sheet"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginVertical="16dp"
        android:background="?actionBarDivider"/>

    <TextView
        android:id="@+id/txt_bottom_sheet_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="8dp"
        android:text="@string/txt_message_img_bottom_sheet"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_gallery_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_gallery_bottom_sheet"
        app:backgroundTint="@null"
        android:textColor="@color/white"
        android:background="@drawable/bg_button"
        android:layout_marginTop="16dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_camera_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_camera_bottom_sheet"
        app:backgroundTint="@null"
        android:background="@drawable/bg_button"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"/>
</LinearLayout>