<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presenter.profile.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/toolbar_perfil"
                    android:textColor="@color/black"
                    android:textStyle="bold" />
            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="24dp"
            android:paddingVertical="10dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <io.woong.shapedimageview.CircleImageView
                    android:id="@+id/img_home_user"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:scaleType="centerCrop"
                    android:layout_gravity="center"
                    android:visibility="invisible"
                    app:border_size="2dp"
                    app:border_color="@color/white"/>

                <ProgressBar
                    android:id="@+id/progressBar_img"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center" />

            </FrameLayout>



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:text="@string/txt_name"
                android:textColor="@color/color_text_hint" />

            <EditText
                android:id="@+id/edit_perfil_nome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                style="@style/Theme.EditText"
                android:drawableStart="@drawable/ic_user"
                android:drawablePadding="8dp"
                android:hint="@string/edt_perfil_name"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:text="@string/txt_perfil_phone"
                android:textColor="@color/color_text_hint" />

            <com.vicmikhailau.maskededittext.MaskedEditText
                android:id="@+id/edit_perfil_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:inputType="phone"
                style="@style/Theme.EditText"
                android:drawableStart="@drawable/ic_phone"
                android:drawablePadding="8dp"
                app:mask="(##) #####-####"
                android:hint="@string/edt_perfil_phone" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:text="@string/edt_email"
                android:textColor="@color/color_text_hint" />

            <EditText
                android:id="@+id/edit_perfil_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:inputType="textEmailAddress"
                android:enabled="false"
                android:textColor="@color/color_disable"
                style="@style/Theme.EditText"
                android:drawableStart="@drawable/ic_email"
                app:drawableTint="@color/color_disable"
                android:drawablePadding="8dp"
                tools:hint="@string/edt_perfil_email_register"/>



            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_save_perfil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_button"
                android:text="@string/btn_perfil_save"
                app:backgroundTint="@null" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="14dp"
                android:visibility="gone"
                tools:visibility="visible"
                android:indeterminateTint="@color/color_default"
                app:layout_constraintBottom_toBottomOf="parent" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>